syntax = "proto3";

package com.example.grpc.user;

message StringMessage {
  string string = 1;
}

message LongMessage {
  int64 long = 1;
}

message BooleanMessage {
  bool boolean = 1;
}

message UserMessage {
  string email = 1;
  string password = 2;
  string name = 3;
  string surname = 4;
  int32 age = 5;
  string city = 6;
  bool status = 7;
  int64 registeredAt = 8;
  repeated string roles = 9;
}

service UserService {
  rpc existsUserByEmail(StringMessage) returns (BooleanMessage);
  rpc registerUser(UserMessage) returns (BooleanMessage);
}